<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.main.profile.ChangePasswordFragment"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/back_arrow_vector"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/change_password"
            android:textStyle="bold"
            android:textSize="26sp"
            android:textColor="@color/blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/new_password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/input_text"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_box_border"
            android:drawableLeft="@drawable/password_vector"
            android:drawablePadding="10dp"
            android:hint="@string/password_input"
            android:inputType="textPassword"
            android:paddingHorizontal="15dp"
            android:paddingVertical="15dp"
            android:textColor="@color/input_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/repeat_new_password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/input_text"/>

        <EditText
            android:id="@+id/passwordRepeated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_box_border"
            android:drawableLeft="@drawable/password_vector"
            android:drawablePadding="10dp"
            android:hint="@string/confirm_password_input"
            android:inputType="textPassword"
            android:paddingHorizontal="15dp"
            android:paddingVertical="15dp"
            android:textColor="@color/input_text"
            android:textSize="16sp" />


        <Button
            android:id="@+id/updateBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:paddingVertical="17.5dp"
            android:layout_marginTop="30dp"
            android:text="@string/update"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>


</LinearLayout>