<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.auth.SignupFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".auth.SignupActivity">

        <View
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/fancy_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/fancy_background"
            android:rotation="180"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/signupLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:text="@string/sign_up_title"
            android:textColor="@color/blue"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/signupLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signupLabelText">


            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_box_border"
                android:drawableStart="@drawable/user_vector"
                android:drawablePadding="10dp"
                android:hint="@string/email_address_input"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:textColor="@color/input_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/fullNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_box_border"
                android:drawableStart="@drawable/details_vector"
                android:drawablePadding="10dp"
                android:hint="@string/full_name_input"
                android:inputType="text"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:textColor="@color/input_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_box_border"
                android:drawableStart="@drawable/password_vector"
                android:drawablePadding="10dp"
                android:hint="@string/password_input"
                android:inputType="textPassword"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:textColor="@color/input_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/passwordRepeatedInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_box_border"
                android:drawableStart="@drawable/password_vector"
                android:drawablePadding="10dp"
                android:hint="@string/confirm_password_input"
                android:inputType="textPassword"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:textColor="@color/input_text"
                android:textSize="16sp" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/nextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue"
                    android:paddingVertical="17.5dp"
                    android:text="@string/next_btn"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:cornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:indeterminateTint="@color/white"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/have_an_account"
                android:textColor="@color/input_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/sign_in_here"
                android:textColor="@color/blue"
                android:textSize="15sp"
                android:textStyle="bold" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>